tests/error/misc_errors/callable_no_args.py
from typing import Callable

from guppylang.decorator import guppy


@guppy.declare
def foo(f: Callable) -> None: ...


guppy.compile(foo)
