tests/error/misc_errors/callable_no_args.err
Error: Invalid type (at $FILE:7:11)
  | 
5 | 
6 | @guppy.declare
7 | def foo(f: Callable) -> None: ...
  |            ^^^^^^^^ Invalid function type

Help: Function types are specified as follows: `Callable[[<arguments>], <return
type>]`

Guppy compilation failed due to 1 previous error
